--- a/experiments/contextual_dictionary.ipynb
+++ b/experiments/contextual_dictionary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "4594a37f-3aaf-459b-b31c-502a4f44ac78",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "API key is valid. Available models: ['whisper-1', 'dall-e-2', 'gpt-3.5-turbo-16k', 'tts-1-hd-1106', 'tts-1-hd', 'gpt-4-turbo-2024-04-09', 'gpt-4-0125-preview', 'gpt-4-turbo-preview', 'gpt-4-turbo', 'gpt-3.5-turbo-instruct-0914', 'gpt-3.5-turbo', 'gpt-3.5-turbo-instruct', 'text-embedding-3-small', 'tts-1', 'text-embedding-3-large', 'gpt-4-1106-preview', 'babbage-002', 'gpt-4o', 'gpt-3.5-turbo-0125', 'gpt-4o-2024-05-13', 'tts-1-1106', 'dall-e-3', 'gpt-4-0613', 'text-embedding-ada-002', 'gpt-4', 'davinci-002', 'gpt-3.5-turbo-1106']\n"
+      "API key is valid. Available models: ['whisper-1', 'dall-e-2', 'gpt-3.5-turbo-16k', 'tts-1-hd-1106', 'tts-1-hd', 'gpt-4-turbo-2024-04-09', 'gpt-4-0125-preview', 'gpt-4-turbo-preview', 'gpt-4-turbo', 'gpt-3.5-turbo-instruct-0914', 'gpt-3.5-turbo', 'gpt-3.5-turbo-instruct', 'text-embedding-3-small', 'tts-1', 'text-embedding-3-large', 'gpt-4-1106-preview', 'babbage-002', 'gpt-3.5-turbo-0125', 'tts-1-1106', 'gpt-4o-2024-05-13', 'gpt-4o', 'dall-e-3', 'gpt-4-0613', 'text-embedding-ada-002', 'gpt-4', 'davinci-002', 'gpt-3.5-turbo-1106']\n"
      ]
     }
    ],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "db89eff5-e02d-467c-9f37-8906da6bf007",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "id": "ef5bf677-c750-40a3-a6ac-d3495f7abf70",
    "metadata": {},
    "outputs": [],
@@ -62,13 +62,25 @@
     "\n",
     "# Prompt templates\n",
     "translation_system_template = \"\"\"Given the following text in {source_language}, \n",
-    "translate the word marked as <b>{word}</b> from {source_language} to {target_language}. Put into result only word translation without surraunding <b></b>\"\"\"\n",
+    "translate the word marked as <b>{word}</b> from {source_language} to {target_language}. \n",
+    "Put into result only word translation without surrounding <b></b>\"\"\"\n",
     "\n",
     "translation_prompt_template = ChatPromptTemplate.from_messages([\n",
     "    ('system', translation_system_template),\n",
     "    ('user', '{text}')\n",
     "])\n",
     "translation_chain = translation_prompt_template | model | parser\n",
+    "\n",
+    "\n",
+    "dictionary_system_template = \"\"\"Given the following text in {source_language}, \n",
+    "give {source_language} - {target_language} vocabulary article for the word marked as <b>{word}</b> - defining part of speach, forms, usage etc. \n",
+    "Give the result in HTML formatting.\"\"\"\n",
+    "\n",
+    "dictionary_prompt_template = ChatPromptTemplate.from_messages([\n",
+    "    ('system', dictionary_system_template),\n",
+    "    ('user', '{text}')\n",
+    "])\n",
+    "dictionary_chain = dictionary_prompt_template | model | parser\n",
     "\n",
     "\n",
     "examples_system_template = \"\"\"Given the following text in {source_language}, \n",
@@ -100,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "id": "0f95c324-b66c-4936-acda-7cecd7004623",
    "metadata": {},
    "outputs": [],
@@ -111,6 +123,8 @@
     "    if model == 'gpt':\n",
     "        translation = translation_chain.invoke({\n",
     "            \"text\": marked_text, \"word\": word, \"source_language\": source_language, \"target_language\": target_language})\n",
+    "        dictionary = dictionary_chain.invoke({\n",
+    "            \"text\": marked_text, \"word\": word, \"source_language\": source_language, \"target_language\": target_language})\n",
     "        examples = examples_chain.invoke({\n",
     "            \"text\": marked_text, \"word\": word, \"source_language\": source_language, \"target_language\": target_language})\n",
     "        explanation = explanation_chain.invoke({\n",
@@ -119,31 +133,13 @@
     "        translation = llama3_chain(translation_prompt_template, text=marked_text, word=word, source_language=source_language, target_language=target_language)\n",
     "        # examples = llama3_chain(example_prompt_template, text=marked_text, word=word, source_language=source_language, target_language=target_language)\n",
     "        # explanation = llama3_chain(explanation_prompt_template, text=marked_text, word=word, source_language=source_language)\n",
-    "    return translation, examples, explanation\n",
-    "\n",
-    "def format_results_in_html(translation: str, examples: str, explanation: str) -> str:\n",
-    "    html_content = f\"\"\"\n",
-    "    <div>\n",
-    "        <h2>Translation</h2>\n",
-    "        <p>{translation}</p>\n",
-    "        <h2>Usage Examples</h2>\n",
-    "        <ul>\n",
-    "    \"\"\"\n",
-    "    for example in examples.split(\"\\n\"):\n",
-    "        html_content += f\"<li>{example}</li>\"\n",
-    "    \n",
-    "    html_content += f\"\"\"\n",
-    "        </ul>\n",
-    "        <h2>Explanation</h2>\n",
-    "        <p>{explanation}</p>\n",
-    "    </div>\n",
-    "    \"\"\"\n",
-    "    return f\"{translation}\\n{examples}\\n{explanation}\"\n"
+    "    return f\"{translation}<br><br>{dictionary}<br><br>{examples}<br<br>>{explanation}\"\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "id": "38b2232f-0272-4621-bcc5-f9ffe75cc4d3",
    "metadata": {},
    "outputs": [
@@ -151,37 +147,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ChatGPT-4 Results:\n",
-      "Love\n",
-      "1. Duboko verujem u snagu <b>ljubavi</b> koja nas spaja i čini da sve probleme prevaziđemo zajedno.\n",
-      "2. Njihova veza je puna strasti i <b>ljubavi</b>, moguće je osetiti toplinu njihovih osmeha dok su zajedno.\n",
-      "3. <b>Ljubav</b> prema prirodi je ono što me inspiriše da očuvam ovaj predivan svet za buduće generacije.\n",
-      "<b>Ljubav</b> predstavlja snažan osećaj topline, privrženosti i pažnje prema nekome ili nečemu. To je osećaj koji nas pokreće, čini da se osećamo srećno i ispunjeno.\n"
+      "ChatGPT-4 Results:\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "key<br><br><html>\n",
+       "  <p>\n",
+       "    <b>ključ</b> - imenica\n",
+       "    <br>\n",
+       "    <ul>\n",
+       "      <li>jednina: ključ</li>\n",
+       "      <li>množina: ključevi</li>\n",
+       "    </ul>\n",
+       "    <br>\n",
+       "    <b>Značenje:</b> Predmet koji služi za otvaranje brave ili rešavanje problema.\n",
+       "    <br>\n",
+       "    <b>Primeri rečenica:</b>\n",
+       "    <ul>\n",
+       "      <li><i>ključ</i> je bio skriven ispod otirača.</li>\n",
+       "      <li>Konačno smo pronašli <i>ključ</i> za rešenje matematičkog problema.</li>\n",
+       "    </ul>\n",
+       "  </p>\n",
+       "</html><br><br>1. Izgubila sam <b>ključ</b> od stana i sada ne mogu da uđem.\n",
+       "2. Našao sam <b>ključ</b> za uspeh u poslu - upornost i trud.\n",
+       "3. Ključna stvar u vezi je poverenje među partnerima.<br<br>>Reč <b>ključ</b> označava predmet ili pojam koji je neophodan za rešavanje neke situacije ili problema. Može biti fizički predmet poput ključa za otvaranje vrata, ali se takođe koristi i u prenesenom značenju za nešto što je ključno ili presudno. U datim rečenicama, ključ je bio skriven ispod otirača, što znači da je bio važan za otvaranje nečega. Takođe, pronašli smo ključ za rešenje matematičkog problema, što znači da smo pronašli neophodnu informaciju ili strategiju za rešavanje problema."
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "# Example usage\n",
-    "serbian_text = \"Ljubav je najlepša stvar na svetu. Ljubav pokreće sve.\"\n",
-    "word_to_translate = \"Ljubav\"\n",
+    "# serbian_text = \"Ljubav je najlepša stvar na svetu. Ljubav pokreće sve.\"\n",
+    "# word_to_translate = \"Ljubav\"\n",
+    "serbian_text = \"pokreće sve. ključ je bio skriven ispod otirača. Konačno smo pronašli ključ za rešenje matematičkog problema. Ljubav je najlepša \"\n",
+    "word_to_translate = \"ključ\"\n",
     "source_language = \"Serbian\"\n",
     "target_language = \"English\"\n",
     "\n",
     "# Test with ChatGPT-4\n",
-    "translation_gpt, examples_gpt, explanation_gpt = get_translation_examples_and_explanation(serbian_text, word_to_translate, source_language, target_language, model='gpt')\n",
+    "gpt = get_translation_examples_and_explanation(serbian_text, word_to_translate, source_language, target_language, model='gpt')\n",
     "\n",
     "# Test with Llama3\n",
     "# translation_llama, examples_llama, explanation_llama = get_translation_examples_and_explanation(serbian_text, word_to_translate, source_language, target_language, model='llama3')\n",
     "\n",
-    "# Display results in HTML\n",
-    "html_result_gpt = format_results_in_html(translation_gpt, examples_gpt, explanation_gpt)\n",
-    "# html_result_llama = format_results_in_html(translation_llama, examples_llama, explanation_llama)\n",
-    "\n",
     "from IPython.display import display, HTML\n",
     "\n",
     "print(\"ChatGPT-4 Results:\")\n",
-    "# display(HTML(html_result_gpt))\n",
-    "print(html_result_gpt)\n",
+    "display(HTML(gpt))\n",
     "\n",
     "# print(\"Llama3 Results:\")\n",
     "# display(HTML(html_result_llama))\n"
