more and more experiments with LLM

--- a/experiments/contextual_dictionary.ipynb
+++ b/experiments/contextual_dictionary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "4594a37f-3aaf-459b-b31c-502a4f44ac78",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "API key is valid. Available models: ['whisper-1', 'dall-e-2', 'gpt-3.5-turbo-16k', 'tts-1-hd-1106', 'tts-1-hd', 'gpt-4-turbo-2024-04-09', 'gpt-4-0125-preview', 'gpt-4-turbo-preview', 'gpt-4-turbo', 'gpt-3.5-turbo-instruct-0914', 'gpt-3.5-turbo', 'gpt-3.5-turbo-instruct', 'text-embedding-3-small', 'tts-1', 'text-embedding-3-large', 'gpt-4-1106-preview', 'babbage-002', 'gpt-3.5-turbo-0125', 'tts-1-1106', 'gpt-4o-2024-05-13', 'gpt-4o', 'dall-e-3', 'gpt-4-0613', 'text-embedding-ada-002', 'gpt-4', 'davinci-002', 'gpt-3.5-turbo-1106']\n"
+      "API key is valid. Available models: ['whisper-1', 'dall-e-2', 'gpt-3.5-turbo-16k', 'tts-1-hd-1106', 'tts-1-hd', 'gpt-4-turbo-2024-04-09', 'gpt-4-0125-preview', 'gpt-4-turbo-preview', 'gpt-4-turbo', 'gpt-3.5-turbo-instruct-0914', 'gpt-3.5-turbo', 'gpt-3.5-turbo-instruct', 'text-embedding-3-small', 'tts-1', 'text-embedding-3-large', 'gpt-4-1106-preview', 'babbage-002', 'gpt-3.5-turbo-0125', 'tts-1-1106', 'gpt-4o-2024-05-13', 'dall-e-3', 'gpt-4-0613', 'gpt-4o', 'text-embedding-ada-002', 'gpt-4', 'davinci-002', 'gpt-3.5-turbo-1106']\n"
      ]
     }
    ],
@@ -32,7 +32,7 @@
     "except openai.error.AuthenticationError as e:\n",
     "    print(\"API key is invalid:\", str(e))\n",
     "\n",
-    "openai_llm = ChatOpenAI(model=\"gpt-3.5-turbo\", api_key=os.getenv(\"OPENAI_API_KEY\"))\n"
+    "openai_llm = ChatOpenAI(model=\"gpt-3.5-turbo\", api_key=os.getenv(\"OPENAI_API_KEY\"))  # gpt-4-turbo - more correct grammar info\n"
    ]
   },
   {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "id": "ef5bf677-c750-40a3-a6ac-d3495f7abf70",
    "metadata": {},
    "outputs": [],
@@ -63,6 +63,7 @@
     "# Prompt templates\n",
     "translation_system_template = \"\"\"Given the following text in {source_language}, \n",
     "translate the word marked as <b>{word}</b> from {source_language} to {target_language}. \n",
+    "Give the meaning of it in the exact sentence.\n",
     "Put into result only word translation without surrounding <b></b>\"\"\"\n",
     "\n",
     "translation_prompt_template = ChatPromptTemplate.from_messages([\n",
@@ -73,8 +74,11 @@
     "\n",
     "\n",
     "dictionary_system_template = \"\"\"Given the following text in {source_language}, \n",
-    "give {source_language} - {target_language} vocabulary article for the word marked as <b>{word}</b> - defining part of speach, forms, usage etc. \n",
-    "Give the result in HTML formatting.\"\"\"\n",
+    "write {source_language} - {target_language} dictionary article for the word marked as <b>{word}</b>.\n",
+    "The article should be in {target_language}, describe part of the speach and other grammar attributes, declination table and other information \n",
+    "you expect to see in a good dictionary. \n",
+    "If they are different for different usage of the word give them for the usage in exact sentence.\n",
+    "Give the result in HTML formatting, without any block marks.\"\"\"\n",
     "\n",
     "dictionary_prompt_template = ChatPromptTemplate.from_messages([\n",
     "    ('system', dictionary_system_template),\n",
@@ -94,7 +98,7 @@
     "\n",
     "\n",
     "explanation_system_template = \"\"\"Given the following text in {source_language}, \n",
-    "using only {source_language} explain the meaning of the word marked as <b>{word}</b>.\"\"\"\n",
+    "using only {source_language} explain the meaning of the word marked as <b>{word}</b> in exact sentence.\"\"\"\n",
     "\n",
     "explanation_prompt_template = ChatPromptTemplate.from_messages([\n",
     "    ('system', explanation_system_template),\n",
@@ -112,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "0f95c324-b66c-4936-acda-7cecd7004623",
    "metadata": {},
    "outputs": [],
@@ -133,13 +137,13 @@
     "        translation = llama3_chain(translation_prompt_template, text=marked_text, word=word, source_language=source_language, target_language=target_language)\n",
     "        # examples = llama3_chain(example_prompt_template, text=marked_text, word=word, source_language=source_language, target_language=target_language)\n",
     "        # explanation = llama3_chain(explanation_prompt_template, text=marked_text, word=word, source_language=source_language)\n",
-    "    return f\"{translation}<br><br>{dictionary}<br><br>{examples}<br<br>>{explanation}\"\n",
+    "    return f\"{translation}<br><br>{dictionary}<br><br>{examples}<br><br>{explanation}\"\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "id": "38b2232f-0272-4621-bcc5-f9ffe75cc4d3",
    "metadata": {},
    "outputs": [
@@ -153,26 +157,31 @@
     {
      "data": {
       "text/html": [
-       "key<br><br><html>\n",
-       "  <p>\n",
-       "    <b>ključ</b> - imenica\n",
-       "    <br>\n",
-       "    <ul>\n",
-       "      <li>jednina: ključ</li>\n",
-       "      <li>množina: ključevi</li>\n",
-       "    </ul>\n",
-       "    <br>\n",
-       "    <b>Značenje:</b> Predmet koji služi za otvaranje brave ili rešavanje problema.\n",
-       "    <br>\n",
-       "    <b>Primeri rečenica:</b>\n",
-       "    <ul>\n",
-       "      <li><i>ključ</i> je bio skriven ispod otirača.</li>\n",
-       "      <li>Konačno smo pronašli <i>ključ</i> za rešenje matematičkog problema.</li>\n",
-       "    </ul>\n",
-       "  </p>\n",
-       "</html><br><br>1. Izgubila sam <b>ključ</b> od stana i sada ne mogu da uđem.\n",
-       "2. Našao sam <b>ključ</b> za uspeh u poslu - upornost i trud.\n",
-       "3. Ključna stvar u vezi je poverenje među partnerima.<br<br>>Reč <b>ključ</b> označava predmet ili pojam koji je neophodan za rešavanje neke situacije ili problema. Može biti fizički predmet poput ključa za otvaranje vrata, ali se takođe koristi i u prenesenom značenju za nešto što je ključno ili presudno. U datim rečenicama, ključ je bio skriven ispod otirača, što znači da je bio važan za otvaranje nečega. Takođe, pronašli smo ključ za rešenje matematičkog problema, što znači da smo pronašli neophodnu informaciju ili strategiju za rešavanje problema."
+       "leaf<br><br><h2><b>list</b></h2>\n",
+       "<p><i>Part of speech:</i> noun</p>\n",
+       "<p><i>Plural form:</i> listovi</p>\n",
+       "\n",
+       "<p><b>1. </b> A leaf from a tree:</p>\n",
+       "<ul>\n",
+       "<li><b>Nominative:</b> list</li>\n",
+       "<li><b>Genitive:</b> lista</li>\n",
+       "<li><b>Dative:</b> listu</li>\n",
+       "<li><b>Accusative:</b> list</li>\n",
+       "<li><b>Instrumental:</b> listom</li>\n",
+       "<li><b>Locative:</b> listu</li>\n",
+       "</ul>\n",
+       "\n",
+       "<p><b>2. </b> A sheet of paper for writing:</p>\n",
+       "<ul>\n",
+       "<li><b>Nominative:</b> list</li>\n",
+       "<li><b>Genitive:</b> lista</li>\n",
+       "<li><b>Dative:</b> listu</li>\n",
+       "<li><b>Accusative:</b> list</li>\n",
+       "<li><b>Instrumental:</b> listom</li>\n",
+       "<li><b>Locative:</b> listu</li>\n",
+       "</ul><br><br>1. Prošetala je kroz šumu i primetila kako se <b>list</b> sa drveta lagano spuštao na tlo.\n",
+       "2. U mojoj torbi uvek nosim blokčić sa <b>listovima</b> papira za brze beleške.\n",
+       "3. Posle jake kiše, svi su se <b>listovi</b> na drveću sjajili na suncu.<br><br><b>List</b> je deo biljke koji obavlja funkciju fotosinteze i obično je tanak, zelen ili smeđ, sa karakterističnom nervaturom."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -186,8 +195,8 @@
     "# Example usage\n",
     "# serbian_text = \"Ljubav je najlepša stvar na svetu. Ljubav pokreće sve.\"\n",
     "# word_to_translate = \"Ljubav\"\n",
-    "serbian_text = \"pokreće sve. ključ je bio skriven ispod otirača. Konačno smo pronašli ključ za rešenje matematičkog problema. Ljubav je najlepša \"\n",
-    "word_to_translate = \"ključ\"\n",
+    "serbian_text = \"pokreće sve. list sa drveta je pao na zemlju. Na stolu je bio list papira sa važnim beleškama. Ljubav je najlepša \"\n",
+    "word_to_translate = \"list\"\n",
     "source_language = \"Serbian\"\n",
     "target_language = \"English\"\n",
     "\n",
