ready to use LLM

--- a/experiments/contextual_dictionary.ipynb
+++ b/experiments/contextual_dictionary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "4594a37f-3aaf-459b-b31c-502a4f44ac78",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "id": "ef5bf677-c750-40a3-a6ac-d3495f7abf70",
    "metadata": {},
    "outputs": [],
@@ -75,8 +75,9 @@
     "\n",
     "dictionary_system_template = \"\"\"Given the following text in {source_language}, \n",
     "write {source_language} - {target_language} dictionary article for the word marked as <b>{word}</b>.\n",
-    "The article should be in {target_language}, describe part of the speach and other grammar attributes, declination table and other information \n",
-    "you expect to see in a good dictionary. \n",
+    "The article should be in {target_language}, describe part of the speach, genre, number, countability and other grammar attributes, declination table and other information \n",
+    "you expect to see in a good dictionary.\n",
+    "Do that in as compact way in less text as possible.\n",
     "If they are different for different usage of the word give them for the usage in exact sentence.\n",
     "Give the result in HTML formatting, without any block marks.\"\"\"\n",
     "\n",
@@ -98,7 +99,9 @@
     "\n",
     "\n",
     "explanation_system_template = \"\"\"Given the following text in {source_language}, \n",
-    "using only {source_language} explain the meaning of the word marked as <b>{word}</b> in exact sentence.\"\"\"\n",
+    "using only {source_language} explain the meaning of the word marked as <b>{word}</b> in exact sentence.\n",
+    "You are a teacher who read the text with your student, use the exact context in the sentence for the explanation.\n",
+    "\"\"\"\n",
     "\n",
     "explanation_prompt_template = ChatPromptTemplate.from_messages([\n",
     "    ('system', explanation_system_template),\n",
@@ -143,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "id": "38b2232f-0272-4621-bcc5-f9ffe75cc4d3",
    "metadata": {},
    "outputs": [
@@ -157,31 +160,34 @@
     {
      "data": {
       "text/html": [
-       "leaf<br><br><h2><b>list</b></h2>\n",
-       "<p><i>Part of speech:</i> noun</p>\n",
-       "<p><i>Plural form:</i> listovi</p>\n",
-       "\n",
-       "<p><b>1. </b> A leaf from a tree:</p>\n",
-       "<ul>\n",
-       "<li><b>Nominative:</b> list</li>\n",
-       "<li><b>Genitive:</b> lista</li>\n",
-       "<li><b>Dative:</b> listu</li>\n",
-       "<li><b>Accusative:</b> list</li>\n",
-       "<li><b>Instrumental:</b> listom</li>\n",
-       "<li><b>Locative:</b> listu</li>\n",
-       "</ul>\n",
-       "\n",
-       "<p><b>2. </b> A sheet of paper for writing:</p>\n",
-       "<ul>\n",
-       "<li><b>Nominative:</b> list</li>\n",
-       "<li><b>Genitive:</b> lista</li>\n",
-       "<li><b>Dative:</b> listu</li>\n",
-       "<li><b>Accusative:</b> list</li>\n",
-       "<li><b>Instrumental:</b> listom</li>\n",
-       "<li><b>Locative:</b> listu</li>\n",
-       "</ul><br><br>1. Prošetala je kroz šumu i primetila kako se <b>list</b> sa drveta lagano spuštao na tlo.\n",
-       "2. U mojoj torbi uvek nosim blokčić sa <b>listovima</b> papira za brze beleške.\n",
-       "3. Posle jake kiše, svi su se <b>listovi</b> na drveću sjajili na suncu.<br><br><b>List</b> je deo biljke koji obavlja funkciju fotosinteze i obično je tanak, zelen ili smeđ, sa karakterističnom nervaturom."
+       "leaf<br><br><h3>list</h3>\n",
+       "<p><i>noun</i></p>\n",
+       "<p><b>1.</b> <i>singular, masculine</i></p>\n",
+       "<p><b>Declination:</b></p>\n",
+       "<table>\n",
+       "<tr><th></th><th>Singular</th></tr>\n",
+       "<tr><td><b>Nominative:</b></td><td>list</td></tr>\n",
+       "<tr><td><b>Genitive:</b></td><td>lista</td></tr>\n",
+       "<tr><td><b>Dative:</b></td><td>listu</td></tr>\n",
+       "<tr><td><b>Accusative:</b></td><td>list</td></tr>\n",
+       "<tr><td><b>Instrumental:</b></td><td>listom</td></tr>\n",
+       "<tr><td><b>Locative:</b></td><td>listu</td></tr>\n",
+       "<tr><td><b>Vocative:</b></td><td>liste</td></tr>\n",
+       "</table>\n",
+       "<p><b>2.</b> <i>singular, neuter</i></p>\n",
+       "<p><b>Declination:</b></p>\n",
+       "<table>\n",
+       "<tr><th></th><th>Singular</th></tr>\n",
+       "<tr><td><b>Nominative:</b></td><td>list</td></tr>\n",
+       "<tr><td><b>Genitive:</b></td><td>lista</td></tr>\n",
+       "<tr><td><b>Dative:</b></td><td>listu</td></tr>\n",
+       "<tr><td><b>Accusative:</b></td><td>list</td></tr>\n",
+       "<tr><td><b>Instrumental:</b></td><td>listom</td></tr>\n",
+       "<tr><td><b>Locative:</b></td><td>listu</td></tr>\n",
+       "<tr><td><b>Vocative:</b></td><td>liste</td></tr>\n",
+       "</table><br><br>1. U šumi su svi <b>listovi</b> počeli da se žute jer se približava jesen.\n",
+       "2. Pronašla sam suvi <b>list</b> na stazi i koristila ga kao zaklon od kiše.\n",
+       "3. Na prozoru su se vijorili zeleni prolećni <b>listovi</b> dok je vetar ulazio u sobu.<br><br><b>List</b> je deo drveta koji raste iz grane i obično ima zelenu boju. U ovom slučaju, reč \"list\" se odnosi na deo drveta koji je pao na zemlju, što znači da je reč o delu drveta, a ne o listu papira."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
