more ready to use LLM

--- a/experiments/contextual_dictionary.ipynb
+++ b/experiments/contextual_dictionary.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 65,
    "id": "ef5bf677-c750-40a3-a6ac-d3495f7abf70",
    "metadata": {},
    "outputs": [],
@@ -75,10 +75,11 @@
     "\n",
     "dictionary_system_template = \"\"\"Given the following text in {source_language}, \n",
     "write {source_language} - {target_language} dictionary article for the word marked as <b>{word}</b>.\n",
-    "The article should be in {target_language}, describe part of the speach, genre, number, countability and other grammar attributes, declination table and other information \n",
-    "you expect to see in a good dictionary.\n",
-    "Do that in as compact way in less text as possible.\n",
-    "If they are different for different usage of the word give them for the usage in exact sentence.\n",
+    "The article should be in {target_language}.\n",
+    "Include grammar attributes - part of the speech, genre, number, countability and other grammar attributes.\n",
+    "All grammar attributes should be on one line in a compact way like in good dictionaries.\n",
+    "Include different meanings, declination table and other information you expect to see in a good dictionary like Oxford, but do not include examples.\n",
+    "And do not include translation of the text provided.\n",
     "Give the result in HTML formatting, without any block marks.\"\"\"\n",
     "\n",
     "dictionary_prompt_template = ChatPromptTemplate.from_messages([\n",
@@ -89,7 +90,12 @@
     "\n",
     "\n",
     "examples_system_template = \"\"\"Given the following text in {source_language}, \n",
-    "provide three examples in {source_language} of sentences using the word marked as <b>{word}</b> in his meaning in the context.\"\"\"\n",
+    "provide at least seven examples in {source_language} of sentences using the word marked as <b>{word}</b> in his meaning in the sentence.\n",
+    "Do not give as an example the usage in the given text.\n",
+    "Give translations of the examples to {target_language}\n",
+    "Each example in a separate paragraph (<p>).\n",
+    "Give the result in HTML formatting, without any block marks.\n",
+    "\"\"\"\n",
     "\n",
     "examples_prompt_template = ChatPromptTemplate.from_messages([\n",
     "    ('system', examples_system_template),\n",
@@ -146,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 68,
    "id": "38b2232f-0272-4621-bcc5-f9ffe75cc4d3",
    "metadata": {},
    "outputs": [
@@ -160,34 +166,30 @@
     {
      "data": {
       "text/html": [
-       "leaf<br><br><h3>list</h3>\n",
-       "<p><i>noun</i></p>\n",
-       "<p><b>1.</b> <i>singular, masculine</i></p>\n",
+       "leaf<br><br><p><b>list</b></p>\n",
+       "<p><i>noun, masculine</i></p>\n",
+       "<p><b>Meanings:</b></p>\n",
+       "<ol>\n",
+       "<li>leaf</li>\n",
+       "<li>sheet (of paper)</li>\n",
+       "</ol>\n",
        "<p><b>Declination:</b></p>\n",
        "<table>\n",
-       "<tr><th></th><th>Singular</th></tr>\n",
-       "<tr><td><b>Nominative:</b></td><td>list</td></tr>\n",
-       "<tr><td><b>Genitive:</b></td><td>lista</td></tr>\n",
-       "<tr><td><b>Dative:</b></td><td>listu</td></tr>\n",
-       "<tr><td><b>Accusative:</b></td><td>list</td></tr>\n",
-       "<tr><td><b>Instrumental:</b></td><td>listom</td></tr>\n",
-       "<tr><td><b>Locative:</b></td><td>listu</td></tr>\n",
-       "<tr><td><b>Vocative:</b></td><td>liste</td></tr>\n",
-       "</table>\n",
-       "<p><b>2.</b> <i>singular, neuter</i></p>\n",
-       "<p><b>Declination:</b></p>\n",
-       "<table>\n",
-       "<tr><th></th><th>Singular</th></tr>\n",
-       "<tr><td><b>Nominative:</b></td><td>list</td></tr>\n",
-       "<tr><td><b>Genitive:</b></td><td>lista</td></tr>\n",
-       "<tr><td><b>Dative:</b></td><td>listu</td></tr>\n",
-       "<tr><td><b>Accusative:</b></td><td>list</td></tr>\n",
-       "<tr><td><b>Instrumental:</b></td><td>listom</td></tr>\n",
-       "<tr><td><b>Locative:</b></td><td>listu</td></tr>\n",
-       "<tr><td><b>Vocative:</b></td><td>liste</td></tr>\n",
-       "</table><br><br>1. U šumi su svi <b>listovi</b> počeli da se žute jer se približava jesen.\n",
-       "2. Pronašla sam suvi <b>list</b> na stazi i koristila ga kao zaklon od kiše.\n",
-       "3. Na prozoru su se vijorili zeleni prolećni <b>listovi</b> dok je vetar ulazio u sobu.<br><br><b>List</b> je deo drveta koji raste iz grane i obično ima zelenu boju. U ovom slučaju, reč \"list\" se odnosi na deo drveta koji je pao na zemlju, što znači da je reč o delu drveta, a ne o listu papira."
+       "<tr><th>Case</th><th>Singular</th><th>Plural</th></tr>\n",
+       "<tr><td>Nominative</td><td>list</td><td>listovi</td></tr>\n",
+       "<tr><td>Genitive</td><td>lista</td><td>listova</td></tr>\n",
+       "<tr><td>Dative</td><td>listu</td><td>listovima</td></tr>\n",
+       "<tr><td>Accusative</td><td>list</td><td>listove</td></tr>\n",
+       "<tr><td>Instrumental</td><td>listom</td><td>listovima</td></tr>\n",
+       "<tr><td>Locative</td><td>listu</td><td>listovima</td></tr>\n",
+       "<tr><td>Vocative</td><td>liste</td><td>listovi</td></tr>\n",
+       "</table><br><br><p>Volim da šetam kroz šumu i posmatram svaki <b>list</b> na drveću. (I love to walk through the forest and observe every leaf on the trees.)</p>\n",
+       "<p>Jesen je najlepše godišnje doba zbog šarenih <b>listova</b> koji padaju sa drveća. (Autumn is the most beautiful season because of the colorful leaves falling from the trees.)</p>\n",
+       "<p>Na prozoru stoji vaza sa suvim <b>listovima</b> cveća. (There is a vase with dried flower petals on the window sill.)</p>\n",
+       "<p>Uvek me oduševi kada vidim prvi zeleni <b>list</b> na granama u proleće. (I am always delighted when I see the first green leaf on the branches in spring.)</p>\n",
+       "<p>Dok sam čistila dvorište, naletele su mi na oči neke osušene <b>listove</b>. (While I was cleaning the yard, some dried leaves caught my eye.)</p>\n",
+       "<p>Deca su skupljala šarene <b>listiće</b> sa zemlje i pravila šarene buketiće. (The children were picking up colorful little leaves from the ground and making colorful bouquets.)</p>\n",
+       "<p>Kada je vetar počeo da duva jače, svi <b>listovi</b> su počeli da se ljuljaju na granama. (When the wind started blowing stronger, all the leaves began to sway on the branches.)</p><br><br><b>List</b> u ovom kontekstu se odnosi na tanku, ravnu i obično široku strukturu koja se može naći na drveću ili papiru. U prvom delu rečenice, <b>list</b> sa drveta je pao na zemlju, što znači da je tanak deo drveta koji nosi lišće pao na zemlju. U drugom delu rečenice, na stolu je bio list papira sa važnim beleškama, reč je o tankom komadu papira gde su zapisane važne informacije."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
