--- a/experiments/contextual_dictionary.ipynb
+++ b/experiments/contextual_dictionary.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 182,
    "id": "0f95c324-b66c-4936-acda-7cecd7004623",
    "metadata": {},
    "outputs": [],
@@ -76,141 +76,64 @@
     "        parser = SimpleOutputParser()\n",
     "\n",
     "        translation_system_template = \"\"\"Given the following text in {text_language},\n",
-    "        translate the term marked as with <span> tag from {text_language} to {user_language}. \n",
-    "        Give translation for the exact sentence where the term is (and not all occurrences in the text).\n",
-    "        If you are sure the text is in a different language, translate from that language and indicate it by starting the result with the detected language name in parentheses.\n",
-    "        Put into result only word translation without surrounding <b></b>.\"\"\"\n",
+    "translate the term marked with <span class=\"highlighted-term\"> tag to {user_language}. \n",
+    "Give translation of the term in the exact sentence where the term is (and not all occurrences in the text).\n",
+    "Put into result only the term translation.\n",
+    "If the text is not in {text_language}, prefix the result with the text language name in parentheses, like (Latin).\n",
+    "\"\"\"\n",
     "\n",
     "        translation_prompt_template = ChatPromptTemplate.from_messages(\n",
     "            [(\"system\", translation_system_template), (\"user\", \"{text}\")]\n",
     "        )\n",
     "\n",
-    "        dictionary_system_template = \"\"\"Given the following text in {text_language},\n",
-    "        write {text_language} - {user_language} dictionary article for the term marked with <span> tag.\n",
-    "        The article should be in {user_language}.\n",
-    "        Include grammar attributes - part of the speech, genre, number, countability and other grammar attributes.\n",
-    "        All grammar attributes should be on one line in a compact way like in good dictionaries.\n",
-    "        Include different meanings, declination table and other information you expect to see in a good dictionary like Oxford, but do not include examples.\n",
-    "        If you are sure the text is in a different language, write the article based on that language and indicate it by starting the result with the detected language name in parentheses.\n",
-    "        Give the result in HTML formatting, without any block marks.\"\"\"\n",
+    "        dictionary_system_template = \"\"\"Given the term in {text_language},\n",
+    "write {text_language} - {user_language} dictionary article for the term.\n",
+    "The article should be in {user_language}.\n",
+    "Include grammar attributes - part of the speech, genre, number, countability and other grammar attributes.\n",
+    "All grammar attributes should be on one line in a compact way with abbreviations like in good dictionaries.\n",
+    "Include different meanings, declination table and other information you expect to see in a good dictionary\n",
+    "like Oxford, but do not include examples.\n",
+    "If you are sure the text is in a different language, write the article based on that language and indicate\n",
+    "it by starting the result with the detected language name in parentheses.\n",
+    "Give the result in HTML formatting, without any block marks.\"\"\"\n",
     "\n",
     "        dictionary_prompt_template = ChatPromptTemplate.from_messages(\n",
-    "            [(\"system\", dictionary_system_template), (\"user\", \"{text}\")]\n",
+    "            [(\"system\", dictionary_system_template), (\"user\", \"The term is: {term}\")]\n",
     "        )\n",
     "\n",
-    "        examples_system_template = \"\"\"Given the following text in {text_language},\n",
-    "provide up to seven examples in {text_language} of sentences with the term marked with <span> tag in its meaning in the exact \n",
-    "sentence where the term is marked with <span> tag.\n",
-    "Do not give as an example the usages in the given text.\n",
-    "Give translations of the examples to {user_language}, do not prefix them with the language name.\n",
-    "If you are sure the text is not in a {text_language}, provide examples based on that detected language.\n",
-    "Ensure that the detected language is clearly stated at the beginning of the examples list e.g., (Latin) but only if it is different from {text_language}.\n",
-    "Put examples into separate paragraphs (<p>).\n",
-    "Give the result in HTML formatting, without any block marks.\n",
+    "        examples_system_template = \"\"\"Given the term in {text_language}, \n",
+    "provide up to seven examples in {text_language} of sentences with the term.\n",
+    "After each example, provide the translation of the example to {user_language} in a separate paragraph \n",
+    "using the <p> tag.\n",
+    "Do not prefix the translation with ({user_language}) or with \"Translation.\" \n",
+    "Separate examples with <hr> tags. \n",
+    "Provide the result in HTML formatting, without any block marks.\n",
     "\n",
     "Ensure your response adheres strictly to these instructions:\n",
-    "- do not repeat examples.\n",
-    "- if you detected language different from {text_language} then examples should be in that language\n",
-    "\n",
-    "Examples:\n",
-    "1) Serbian - English\n",
-    "Text: Abbati, medico, patronoque <span>intima pande</span>.\n",
-    "\n",
-    "(Latin)\n",
-    "\n",
-    "<p>Puella matri suae <span>intima pande</span>.</p>\n",
-    "<p>Girl, reveal your innermost thoughts to your mother.</p>\n",
-    "\n",
-    "<p>Amico fideli omnia <span>intima pande</span>.</p>\n",
-    "<p>Reveal your deepest secrets to a faithful friend.</p>\n",
-    "\n",
-    "<p>Sapienti semper <span>intima pande</span>.</p>\n",
-    "<p>Always reveal your innermost thoughts to a wise person.</p>\n",
-    "\n",
-    "<p>In angustiis veritas <span>intima pande</span>.</p>\n",
-    "<p>In difficulties, reveal the truth within.</p>\n",
-    "\n",
-    "<p>Omnibus rebus consideratis, <span>intima pande</span>.</p>\n",
-    "<p>After considering all things, reveal your innermost thoughts.</p>\n",
-    "\n",
-    "<p>Quando confidas, <span>intima pande</span>.</p>\n",
-    "<p>When you trust, reveal your innermost thoughts.</p>\n",
-    "\n",
-    "<p>Magistro tuo veritatem <span>intima pande</span>.</p>\n",
-    "<p>Reveal the truth to your teacher.</p>\n",
-    "\n",
-    "2) Serbian - English\n",
-    "\"text\": \"pokreće sve. <span>list</span> sa drveta je pao na zemlju. Na stolu je bio list papira sa važnim beleškama. Ljubav je najlepša \",\n",
-    "\n",
-    "<p>Jesen je donela prvi opali <span>list</span>.</p>\n",
-    "<p>Autumn brought the first fallen leaf.</p>\n",
-    "\n",
-    "<p>Čuo sam kako <span>list</span> šuška pod mojim nogama.</p>\n",
-    "<p>I heard the leaf rustling under my feet.</p>\n",
-    "\n",
-    "<p>Na trgu je vetar podigao suvi <span>list</span>.</p>\n",
-    "<p>In the square, the wind lifted a dry leaf.</p>\n",
-    "\n",
-    "<p>Pročitao sam sve što je bilo napisano na tom <span>listu</span>.</p>\n",
-    "<p>I read everything that was written on that sheet.</p>\n",
-    "\n",
-    "<p>Učitelj je dao učeniku prazan <span>list</span> papira.</p>\n",
-    "<p>The teacher gave the student a blank sheet of paper.</p>\n",
-    "\n",
-    "<p>Svaki <span>list</span> u knjizi je bio pažljivo ispisan.</p>\n",
-    "<p>Every page in the book was carefully written.</p>\n",
-    "\n",
-    "<p>Stari <span>list</span> se jedva držao za granu.</p>\n",
-    "<p>The old leaf was barely hanging on the branch.</p>\n",
-    "\n",
+    "- Do not repeat examples.\n",
+    "- If you detect a language different from {text_language}, mention that, \n",
+    "but do not mention the language if it is {text_language}.\n",
+    "- Do not mark the translation with \"Translation\" or similar terms.\n",
     "        \"\"\"\n",
     "\n",
     "        examples_prompt_template = ChatPromptTemplate.from_messages(\n",
-    "            [(\"system\", examples_system_template), (\"user\", \"{text}\")]\n",
+    "            [(\"system\", examples_system_template), (\"user\", \"The term is: {term}\")]\n",
     "        )\n",
     "\n",
-    "        explain_system_template = \"\"\"You are a {text_language} teacher. \n",
-    "Explain to your {user_language} student, using only {text_language}, the meaning of the term marked in the text with a <span> tag.\n",
-    "Explain only in the context of the sentence where the term is marked with <span> tag.\n",
-    "If the text is not in {text_language}, start with the detected language in parentheses. \n",
+    "        explain_system_template = \"\"\"Explain using only {text_language}, the usage of the term marked\n",
+    "in the text with a <span class=\"highlighted-term\"> tag.\n",
+    "Explain the usage only in the sentence where the term is marked with the <span class=\"highlighted-term\"> tag, \n",
+    "and not in other occurrences of the text.\n",
+    "Only if the text is not in {text_language}, start with the detected language in parentheses.\n",
     "After <hr> provide the translation of the explanation to {user_language}.\n",
     "Give the result in HTML formatting without any additional block marks or labels.\n",
     "\n",
     "Ensure your response adheres strictly to these instructions:\n",
     "- Use {text_language} for the initial explanation.\n",
-    "- Never put into the result ({text_language}) or ({user_language}).\n",
-    "\n",
-    "Examples:\n",
-    "1)\n",
-    "Serbian teacher, English student\n",
-    "Text: Postepeno – očito, od umora – njegov govor je sve očiglednije poprimao <span>mačji</span> akcenat\n",
-    "Result:\n",
-    "\"Mačji\" se odnosi na nešto što je povezano sa mačkama. Na primer, mačji akcenat znači da osoba govori na način koji podseća na zvukove \n",
-    "koje mačke proizvode.\n",
-    "<hr>\n",
-    "\"Mačji\" refers to something that is related to cats. For example, a \"mačji akcenat\" (cat accent) means that a person speaks in a \n",
-    "way that resembles the sounds that cats make.\n",
-    "\n",
-    "1)\n",
-    "Serbian teacher, English student\n",
-    "Text: Abbati, medico, patronoque <span>intima pande</span>.\n",
-    "(Latin) \"Intima pande\" je latinski izraz koji se može prevesti kao \"otkrijte najdublje tajne\" ili \"otkrijte najintimnije detalje\".\n",
-    "\n",
-    "\"Intima\" znači \"najdublje\" ili \"najintimnije\".\n",
-    "\"Pande\" je imperativ glagola \"pandere\", što znači \"otkriti\" ili \"razotkriti\".\n",
-    "\n",
-    "U kontekstu cele fraze, ovo se verovatno odnosi na ideju da treba otkriti svoje najdublje misli ili tajne svešteniku (abbati), lekaru \n",
-    "(medico) i zaštitniku ili pokrovitelju (patrono). Ova fraza sugeriše da bi ove tri figure trebalo da budu osobe od poverenja kojima \n",
-    "se mogu poveriti najintimnije informacije.\n",
-    "<hr>\n",
-    "\"Intima pande\" is a Latin expression that can be translated as \"reveal the deepest secrets\" or \"disclose the most intimate details\".\n",
-    "\n",
-    "\"Intima\" means \"deepest\" or \"most intimate\".\n",
-    "\"Pande\" is the imperative form of the verb \"pandere\", which means \"to reveal\" or \"to disclose\".\n",
-    "\n",
-    "In the context of the whole phrase, this likely refers to the idea that one should reveal their deepest thoughts or secrets to the abbot \n",
-    "(abbati), the doctor (medico), and the patron or protector (patrono). This phrase suggests that these three figures should be trusted \n",
-    "individuals to whom one can confide the most intimate information.\n",
+    "- Never put into the result names of the languages {text_language} or {user_language}.\n",
+    "- Explain the exact sentence where the term is marked with the <span class=\"highlighted-term\"> tag.\n",
+    "Do not mention usage of the term in sentences where it is not marked\n",
+    "with the <span class=\"highlighted-term\"> tag.\n",
     "\"\"\"\n",
     "\n",
     "        explain_prompt_template = ChatPromptTemplate.from_messages(\n",
@@ -227,35 +150,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 184,
    "id": "38b2232f-0272-4621-bcc5-f9ffe75cc4d3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<p><strong>(Serbian)</strong></p>\n",
-       "<p><span style=\"font-weight:bold;\">list</span></p>\n",
-       "<p><strong>Part of speech:</strong> noun</p>\n",
-       "<p><strong>Genre:</strong> masculine</p>\n",
-       "<p><strong>Number:</strong> singular</p>\n",
-       "<p><strong>Countability:</strong> countable</p>\n",
-       "<p><strong>Meanings:</strong></p>\n",
-       "<ol>\n",
-       "<li>leaf</li>\n",
-       "<li>sheet of paper</li>\n",
-       "</ol>\n",
-       "<p><strong>Declination table:</strong></p>\n",
-       "<table>\n",
-       "<tr><th>Case</th><th>Singular</th></tr>\n",
-       "<tr><td>Nominative</td><td>list</td></tr>\n",
-       "<tr><td>Genitive</td><td>lista</td></tr>\n",
-       "<tr><td>Dative</td><td>listu</td></tr>\n",
-       "<tr><td>Accusative</td><td>list</td></tr>\n",
-       "<tr><td>Vocative</td><td>liste</td></tr>\n",
-       "<tr><td>Instrumental</td><td>listom</td></tr>\n",
-       "<tr><td>Locative</td><td>listu</td></tr>\n",
-       "</table>"
+       "leaf"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -278,20 +180,20 @@
     "# serbian_text = \"Ljubav je najlepša stvar na svetu. Ljubav pokreće sve.\"\n",
     "# word_to_translate = \"Ljubav\"\n",
     "\n",
-    "# Llm._create_article_templates = types.MethodType(_create_article_templates, Llm)\n",
+    "Llm._create_article_templates = types.MethodType(_create_article_templates, Llm)\n",
     "llm = Llm()\n",
     "\n",
     "\n",
-    "article_name = \"Dictionary\"\n",
+    "article_name = \"Translate\"\n",
     "article_params = {\n",
     "    \"model_name\": \"gpt-3.5-turbo\"  # \"gpt-4-turbo\"  # Specify the model to use\n",
     "}\n",
     "\n",
     "data = {\n",
-    "    \"text\": \"pokreće sve. <span>list</span> sa drveta je pao na zemlju. Na stolu je bio list papira sa važnim beleškama. Ljubav je najlepša \",\n",
-    "    \"word\": \"list\",\n",
-    "    # \"text\": \"Abbati, medico, patronoque <span>intima pande</span>.\",\n",
-    "    # \"word\": \"intima pande\",\n",
+    "    \"text\": 'pokreće sve. <span class=\"highlighted-term\">list</span> sa drveta je pao na zemlju. Na stolu je bio list papira sa važnim beleškama. Ljubav je najlepša',\n",
+    "    \"term\": \"list\",\n",
+    "    # \"text\": 'Abbati, medico, patronoque <span class=\"highlighted-term\">intima pande</span>.',\n",
+    "    # \"term\": \"intima pande\",\n",
     "    \"text_language\": \"Serbian\",\n",
     "    \"user_language\": \"English\"\n",
     "}\n",
