improved templates in notebook

--- a/experiments/contextual_dictionary.ipynb
+++ b/experiments/contextual_dictionary.ipynb
@@ -101,7 +101,7 @@
     "            [(\"system\", dictionary_system_template), (\"user\", \"The term is: {term}\")]\n",
     "        )\n",
     "\n",
-    "        examples_system_template = \"\"\"Given the term in {text_language}, \n",
+    "        examples_system_template = \"\"\"Given the term in {text_language},\n",
     "provide up to seven examples in {text_language} of sentences with the term.\n",
     "After each example, provide the translation of the example to {user_language} in a separate paragraph \n",
     "using the <p> tag.\n",
@@ -120,10 +120,10 @@
     "            [(\"system\", examples_system_template), (\"user\", \"The term is: {term}\")]\n",
     "        )\n",
     "\n",
-    "        explain_system_template = \"\"\"Explain using only {text_language}, the usage of the term marked\n",
-    "in the text with a <span class=\"highlighted-term\"> tag.\n",
-    "Explain the usage only in the sentence where the term is marked with the <span class=\"highlighted-term\"> tag, \n",
-    "and not in other occurrences of the text.\n",
+    "        explain_system_template = \"\"\"Explain using only {text_language}, the usage\n",
+    "of the term marked in the text with a <span class=\"highlighted-term\"> tag.\n",
+    "Explain the usage only in the sentence where the term\n",
+    "is marked with the <span class=\"highlighted-term\"> tag, and not in other occurrences of the text.\n",
     "Only if the text is not in {text_language}, start with the detected language in parentheses.\n",
     "After <hr> provide the translation of the explanation to {user_language}.\n",
     "Give the result in HTML formatting without any additional block marks or labels.\n",
