--- a/experiments/contextual_dictionary.ipynb
+++ b/experiments/contextual_dictionary.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "API key is valid. Available models: ['whisper-1', 'dall-e-2', 'gpt-3.5-turbo-16k', 'tts-1-hd-1106', 'tts-1-hd', 'gpt-4-turbo-2024-04-09', 'gpt-4-0125-preview', 'gpt-4-turbo-preview', 'gpt-4-turbo', 'gpt-3.5-turbo-instruct-0914', 'gpt-3.5-turbo', 'gpt-3.5-turbo-instruct', 'text-embedding-3-small', 'tts-1', 'text-embedding-3-large', 'gpt-4-1106-preview', 'babbage-002', 'gpt-3.5-turbo-0125', 'tts-1-1106', 'gpt-4o-2024-05-13', 'dall-e-3', 'gpt-4-0613', 'gpt-4o', 'text-embedding-ada-002', 'gpt-4', 'davinci-002', 'gpt-3.5-turbo-1106']\n"
+      "API key is valid. Available models: ['whisper-1', 'tts-1', 'dall-e-2', 'tts-1-hd-1106', 'tts-1-hd', 'gpt-3.5-turbo-1106', 'gpt-4-0125-preview', 'gpt-4-turbo-preview', 'text-embedding-3-small', 'text-embedding-3-large', 'gpt-3.5-turbo-16k', 'gpt-4-1106-preview', 'gpt-4-turbo-2024-04-09', 'babbage-002', 'gpt-4o-2024-05-13', 'gpt-4-turbo', 'gpt-4', 'gpt-4-0613', 'dall-e-3', 'gpt-3.5-turbo-0125', 'tts-1-1106', 'gpt-3.5-turbo', 'gpt-3.5-turbo-instruct', 'gpt-3.5-turbo-instruct-0914', 'text-embedding-ada-002', 'davinci-002', 'gpt-4o']\n"
      ]
     }
    ],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 6,
    "id": "0f95c324-b66c-4936-acda-7cecd7004623",
    "metadata": {},
    "outputs": [],
@@ -140,24 +140,45 @@
     "            [(\"system\", explain_system_template), (\"user\", \"{text}\")]\n",
     "        )\n",
     "\n",
+    "        sentence_system_template = \"\"\"Given following text in {text_language} translate to \n",
+    "{user_language} the sentence with term marked with a <span class=\"highlighted-term\"> tag. \n",
+    "Translate only the sentence with the term marked with a <span class=\"highlighted-term\"> tag \n",
+    "and not other parts of the text. \n",
+    "Give comments in {user_language} about parts that can be difficult to understand by \n",
+    "{user_language} student learning {text_language} - difficult words, forms and expressions etc. \n",
+    "Return result in json without any additional block marks or labels.\n",
+    "Translation in \"translation\", the translated sentence in \"sentence\", \n",
+    "iso code of the text in \"text_language\", comments in \"comments\".\n",
+    "        \"\"\"\n",
+    "\n",
+    "        sentence_prompt_template = ChatPromptTemplate.from_messages(\n",
+    "            [(\"system\", sentence_system_template), (\"user\", \"The text is: {text}\")]\n",
+    "        )\n",
+    "\n",
     "        return {\n",
     "            \"Translate\": {\"template\": translation_prompt_template, \"parser\": parser},\n",
     "            \"Dictionary\": {\"template\": dictionary_prompt_template, \"parser\": parser},\n",
     "            \"Examples\": {\"template\": examples_prompt_template, \"parser\": parser},\n",
     "            \"Explain\": {\"template\": explain_prompt_template, \"parser\": parser},\n",
+    "            \"Sentence\": {\"template\": sentence_prompt_template, \"parser\": parser},\n",
     "        }\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 7,
    "id": "38b2232f-0272-4621-bcc5-f9ffe75cc4d3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "leaf"
+       "{\n",
+       "    \"translation\": \"The <span class=\\\"highlighted-term\\\">leaf</span> fell from the tree.\",\n",
+       "    \"sentence\": \"The <span class=\\\"highlighted-term\\\">leaf</span> fell from the tree.\",\n",
+       "    \"text_language\": \"sr\",\n",
+       "    \"comments\": \"The word 'list' in Serbian can mean both 'leaf' and 'list' in English, so it is important to understand the context to correctly interpret the meaning.\"\n",
+       "}"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -184,7 +205,7 @@
     "llm = Llm()\n",
     "\n",
     "\n",
-    "article_name = \"Translate\"\n",
+    "article_name = \"Sentence\"\n",
     "article_params = {\n",
     "    \"model_name\": \"gpt-3.5-turbo\"  # \"gpt-4-turbo\"  # Specify the model to use\n",
     "}\n",
