sentence lexical article 2

--- a/experiments/contextual_dictionary.ipynb
+++ b/experiments/contextual_dictionary.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "0f95c324-b66c-4936-acda-7cecd7004623",
    "metadata": {},
    "outputs": [],
@@ -140,16 +140,17 @@
     "            [(\"system\", explain_system_template), (\"user\", \"{text}\")]\n",
     "        )\n",
     "\n",
-    "        sentence_system_template = \"\"\"Given following text in {text_language} translate to \n",
-    "{user_language} the sentence with term marked with a <span class=\"highlighted-term\"> tag. \n",
-    "Translate only the sentence with the term marked with a <span class=\"highlighted-term\"> tag \n",
-    "and not other parts of the text. \n",
-    "Give comments in {user_language} about parts that can be difficult to understand by \n",
-    "{user_language} student learning {text_language} - difficult words, forms and expressions etc. \n",
+    "        sentence_system_template = \"\"\"Given following text translate to\n",
+    "{user_language} the sentence with term marked with a <span class=\"highlighted-term\"> tag.\n",
+    "Translate only the full sentence with the term marked with a <span class=\"highlighted-term\"> tag\n",
+    "and not other parts of the text.\n",
+    "Expected text language is {text_language} but you should detect the actual language if it does not fit.\n",
+    "Give comments in {user_language} about parts that can be difficult to understand by\n",
+    "{user_language} student learning {text_language} - difficult words, forms and expressions etc.\n",
     "Return result in json without any additional block marks or labels.\n",
-    "Translation in \"translation\", the translated sentence in \"sentence\", \n",
-    "iso code of the text in \"text_language\", comments in \"comments\".\n",
-    "        \"\"\"\n",
+    "Translation in \"translation\", the translated sentence in \"sentence\",\n",
+    "ISO code of the actual text language in \"text_language\", comments in \"comments\".\n",
+    "\"\"\"\n",
     "\n",
     "        sentence_prompt_template = ChatPromptTemplate.from_messages(\n",
     "            [(\"system\", sentence_system_template), (\"user\", \"The text is: {text}\")]\n",
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "38b2232f-0272-4621-bcc5-f9ffe75cc4d3",
    "metadata": {},
    "outputs": [
@@ -174,10 +175,10 @@
      "data": {
       "text/html": [
        "{\n",
-       "    \"translation\": \"The <span class=\\\"highlighted-term\\\">leaf</span> fell from the tree.\",\n",
-       "    \"sentence\": \"The <span class=\\\"highlighted-term\\\">leaf</span> fell from the tree.\",\n",
-       "    \"text_language\": \"sr\",\n",
-       "    \"comments\": \"The word 'list' in Serbian can mean both 'leaf' and 'list' in English, so it is important to understand the context to correctly interpret the meaning.\"\n",
+       "    \"translation\": \"Abbati, doctor, and reveal your most intimate secrets to your patron.\",\n",
+       "    \"sentence\": \"patronoque <span class=\\\"highlighted-term\\\">intima pande</span>\",\n",
+       "    \"text_language\": \"Latin\",\n",
+       "    \"comments\": \"The term 'intima' might be challenging for English learners as it means 'most intimate' or 'innermost'. The word 'pande' comes from the Latin verb 'pando, pandere' which means 'to reveal' or 'to disclose'.\"\n",
        "}"
       ],
       "text/plain": [
@@ -211,10 +212,10 @@
     "}\n",
     "\n",
     "data = {\n",
-    "    \"text\": 'pokreće sve. <span class=\"highlighted-term\">list</span> sa drveta je pao na zemlju. Na stolu je bio list papira sa važnim beleškama. Ljubav je najlepša',\n",
-    "    \"term\": \"list\",\n",
-    "    # \"text\": 'Abbati, medico, patronoque <span class=\"highlighted-term\">intima pande</span>.',\n",
-    "    # \"term\": \"intima pande\",\n",
+    "    # \"text\": 'pokreće sve. <span class=\"highlighted-term\">list</span> sa drveta je pao na zemlju. Na stolu je bio list papira sa važnim beleškama. Ljubav je najlepša',\n",
+    "    # \"term\": \"list\",\n",
+    "    \"text\": 'Abbati, medico, patronoque <span class=\"highlighted-term\">intima pande</span>.',\n",
+    "    \"term\": \"intima pande\",\n",
     "    \"text_language\": \"Serbian\",\n",
     "    \"user_language\": \"English\"\n",
     "}\n",
