sentence lexical article 3

--- a/experiments/contextual_dictionary.ipynb
+++ b/experiments/contextual_dictionary.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "id": "0f95c324-b66c-4936-acda-7cecd7004623",
    "metadata": {},
    "outputs": [],
@@ -147,9 +147,11 @@
     "Expected text language is {text_language} but you should detect the actual language if it does not fit.\n",
     "Give comments in {user_language} about parts that can be difficult to understand by\n",
     "{user_language} student learning {text_language} - difficult words, forms and expressions etc.\n",
-    "Return result in json without any additional block marks or labels.\n",
-    "Translation in \"translation\", the translated sentence in \"sentence\",\n",
-    "ISO code of the actual text language in \"text_language\", comments in \"comments\".\n",
+    "Return result in json without any additional block marks or labels:\n",
+    "\"translation\" - translation;\n",
+    "\"sentence\" - the original sentence with the marked term;\n",
+    "\"text_language\" - ISO639 set-1 code of the actual text language;\n",
+    "\"comments\" - comments.\n",
     "\"\"\"\n",
     "\n",
     "        sentence_prompt_template = ChatPromptTemplate.from_messages(\n",
@@ -167,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "id": "38b2232f-0272-4621-bcc5-f9ffe75cc4d3",
    "metadata": {},
    "outputs": [
@@ -175,10 +177,10 @@
      "data": {
       "text/html": [
        "{\n",
-       "    \"translation\": \"Abbati, doctor, and reveal your most intimate secrets to your patron.\",\n",
-       "    \"sentence\": \"patronoque <span class=\\\"highlighted-term\\\">intima pande</span>\",\n",
-       "    \"text_language\": \"Latin\",\n",
-       "    \"comments\": \"The term 'intima' might be challenging for English learners as it means 'most intimate' or 'innermost'. The word 'pande' comes from the Latin verb 'pando, pandere' which means 'to reveal' or 'to disclose'.\"\n",
+       "    \"translation\": \"It moves everything.\",\n",
+       "    \"sentence\": \"<span class=\\\"highlighted-term\\\">list</span> sa drveta je pao na zemlju.\",\n",
+       "    \"text_language\": \"sr\",\n",
+       "    \"comments\": \"The term 'list' in Serbian can mean both 'leaf' and 'sheet' in English, depending on the context. In this sentence, it refers to a leaf falling from a tree.\"\n",
        "}"
       ],
       "text/plain": [
@@ -212,10 +214,10 @@
     "}\n",
     "\n",
     "data = {\n",
-    "    # \"text\": 'pokreće sve. <span class=\"highlighted-term\">list</span> sa drveta je pao na zemlju. Na stolu je bio list papira sa važnim beleškama. Ljubav je najlepša',\n",
-    "    # \"term\": \"list\",\n",
-    "    \"text\": 'Abbati, medico, patronoque <span class=\"highlighted-term\">intima pande</span>.',\n",
-    "    \"term\": \"intima pande\",\n",
+    "    \"text\": 'pokreće sve. <span class=\"highlighted-term\">list</span> sa drveta je pao na zemlju. Na stolu je bio list papira sa važnim beleškama. Ljubav je najlepša',\n",
+    "    \"term\": \"list\",\n",
+    "    # \"text\": 'Abbati, medico, patronoque <span class=\"highlighted-term\">intima pande</span>.',\n",
+    "    # \"term\": \"intima pande\",\n",
     "    \"text_language\": \"Serbian\",\n",
     "    \"user_language\": \"English\"\n",
     "}\n",
